# any4lerobot

./: .gitignore  README.md  pyproject.toml
agibot2lerobot/: agibot_fast.py  agibot_h5.py  convert_fast.sh  extract_agibot.py
info/droid/: README.md
openx2lerobot/: build_droid_mapping.py  convert.sh  convert_22_parallel.sh  openx_rlds.py  postprocess_droid.py
openx2lerobot/oxe_utils/: transforms.py
robomind2lerobot/: README.md  robomind_h5.py
